--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,10 @@ Django==3.2
 django-debug-toolbar==3.2.1
 django-geojson==3.2.0
 django-leaflet==0.28.0
+django-pymemcache==1.0.0
 filelock==3.0.12
 Fiona==1.8.19
+GDAL==3.2.2
 geopandas==0.8.1
 identify==2.2.10
 idna==2.10
@@ -32,9 +34,11 @@ Pillow==8.2.0
 postgis==1.0.4
 pre-commit==2.13.0
 psycopg2-binary==2.8.6
+pymemcache==3.5.0
 pyproj==3.1.0
 python-dateutil
 python-dotenv==0.17.0
+python-memcached==1.59
 pytz==2021.1
 PyYAML==5.4.1
 requests==2.25.1
